# pokebenchmark-agent

./: .gitignore  README.md  pyproject.toml
pokebenchmark_agent/: __init__.py  config.py  main.py
pokebenchmark_agent/agent/: __init__.py  context.py  loop.py  stuck_detector.py
pokebenchmark_agent/llm/: __init__.py  base.py  claude.py  gemini.py  ollama_provider.py  openai_provider.py  response.py
pokebenchmark_agent/memory/: __init__.py  store.py
pokebenchmark_agent/planning/: __init__.py  workspace.py
pokebenchmark_agent/session/: runner.py
pokebenchmark_agent/skills/: __init__.py  loader.py  manager.py
tests/: test_agent_loop.py  test_config.py  test_context_builder.py  test_llm.py  test_memory_store.py  test_planning.py  test_session_runner.py  test_skill_loader.py  test_skill_manager.py  test_stuck_detector.py
